Добавляет базовую стилизацию крупных сеточных блоков для header

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,7 +10,7 @@
 @import "common/page-footer.scss";
 @import "common/socials.scss";
 @import "common/copyright.scss";
-
+@import "common/container.scss";
 
 // main index
 @import "index/page-main.scss";
