--- a/source/sass/common/page-footer.scss
+++ b/source/sass/common/page-footer.scss
@@ -1,3 +1,10 @@
-.page-footer{
+.page-footer {
   background-color: #eaeaea;
+}
+
+.page-footer__logo-link {
+  padding-top: 40px;
+  padding-bottom: 16px;
+  text-align: center;
+  display: block;
 }
