--- a/source/sass/common/invite-cooperation.scss
+++ b/source/sass/common/invite-cooperation.scss
@@ -1,3 +1,7 @@
+.invite-cooperation {
+  background-color: #f2f2f2;
+}
+
 .invite-cooperation__wrapper {
   display: flex;
   width: 320px;
@@ -5,7 +9,7 @@
   padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 25px;
+  padding-top: 25px;
   margin-bottom: 25px;
 }
 
