Добавляет базовую стилизацию крупных сеточных блоков основного контента form.html

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,7 @@
 @import "common/visually-hidden.scss";
 @import "common/page.scss";
 @import "common/main-header.scss";
+@import "common/toggle-navigation.scss";
 @import "common/main-navigation.scss";
 @import "common/invite-cooperation.scss";
 @import "common/button";
