--- a/source/sass/catalog/catalog.scss
+++ b/source/sass/catalog/catalog.scss
@@ -1,16 +1,16 @@
 .catalog {
+  padding-top: 27px;
   padding-left: 20px;
   padding-right: 20px;
 }
 
 .catalog__title {
   margin: 0;
-  padding-top: 15px;
-  padding-bottom: 28px;
+  margin-bottom: 28px;
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 36px;
   font-weight: 400;
-  line-height: 60px;
+  line-height: 100%;
   color: #000000;
 }
 
