--- a/source/sass/common/invite-cooperation.scss
+++ b/source/sass/common/invite-cooperation.scss
@@ -1,6 +1,9 @@
 .invite-cooperation {
   background-color: #f2f2f2;
 }
+.invite-cooperation--index {
+  background-color: #ffffff;
+}
 
 .invite-cooperation__wrapper {
   display: flex;
@@ -23,7 +26,6 @@
   color: #111111;
   margin: 0;
 }
-
 
 .invite-cooperation__address {
   line-height: 20px;
