Добавляет исправления после код-ревью наставника

--- a/source/sass/catalog/extra-card-item.scss
+++ b/source/sass/catalog/extra-card-item.scss
@@ -2,7 +2,8 @@
   padding-bottom: 18px;
   border-bottom: 1px solid #e6e6e6;
 }
-.extra-card-item__title{
+
+.extra-card-item__title {
   font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -14,10 +15,22 @@
   margin-top: 15px;
   margin-bottom: 15px;
 }
+
 .extra-card-item__table {
   margin-top: 15px;
   margin-bottom: 15px;
+  width: 280px;
 }
+
 .extra-card-item__button {
   text-decoration: none;
+}
+
+.extra-card-item__feature {
+  padding: 0;
+}
+
+.extra-card-item__value {
+  text-align: right;
+  padding: 0;
 }
