--- a/source/sass/form/comment-area.scss
+++ b/source/sass/form/comment-area.scss
@@ -50,7 +50,6 @@
   padding-left: 13px;
   padding-top: 10px;
   margin-bottom: 14px;
-  border: 1px solid #E7E7E7;
-  resize:none
+  border: 1px solid #e7e7e7;
+  resize: none;
 }
-
