--- a/source/sass/form/selection.scss
+++ b/source/sass/form/selection.scss
@@ -26,3 +26,12 @@
   color: #000000;
   margin-bottom: 39px;
 }
+
+.selection__form-required {
+  line-height: 16px;
+  margin: 0;
+  margin-top: 21px;
+  margin-bottom: 32px;
+  color: #000000;
+  text-align: center;
+}
