--- a/source/sass/index/promo.scss
+++ b/source/sass/index/promo.scss
@@ -9,10 +9,9 @@
   font-size: 36px;
   line-height: 100%;
   text-align: center;
-  color: #FFFFFF;
+  color: #ffffff;
   margin: 0;
   padding: 0;
-
 }
 
 .promo__slogan {
@@ -23,7 +22,7 @@
   line-height: 100%;
   text-align: center;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: #ffffff;
   margin: 0;
   padding: 0;
   margin-top: 25px;
@@ -34,8 +33,9 @@
   display: block;
   margin: 0 auto 3px;
 }
-.promo__program-selection{
-text-decoration: none;
-max-width: 280px;
-margin: 0 auto;
+
+.promo__program-selection {
+  text-decoration: none;
+  max-width: 280px;
+  margin: 0 auto;
 }
