--- a/source/sass/common/copyright.scss
+++ b/source/sass/common/copyright.scss
@@ -12,11 +12,11 @@
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
-  text-decoration: none
+  text-decoration: none;
 }
-.copyright__name{
-font-size: 16px;
-line-height: 19px;
-color: #444444;
 
+.copyright__name {
+  font-size: 16px;
+  line-height: 19px;
+  color: #444444;
 }
