--- a/source/sass/common/main-navigation.scss
+++ b/source/sass/common/main-navigation.scss
@@ -10,7 +10,7 @@
   padding-top: 22px;
   padding-bottom: 22px;
   width: 280px;
-  border-top: 1px solid #E6E6E6;
+  border-top: 1px solid #e6e6e6;
 }
 
 .main-navigation__link {
