--- a/source/sass/form/owner-info.scss
+++ b/source/sass/form/owner-info.scss
@@ -1,4 +1,3 @@
-
 .owner-info {
   border: 0;
   margin: 0;
@@ -27,7 +26,7 @@
   text-transform: none;
 }
 
-.owner-info__title::after{
+.owner-info__title::after {
   content: "";
   position: absolute;
   width: 100vw;
@@ -38,7 +37,7 @@
 }
 
 .owner-info__email-input {
- font-family: "Oswald", "Arial", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -52,23 +51,23 @@
   height: 45px;
   margin-left: 8px;
   margin-bottom: 14px;
-  border: 1px solid #E7E7E7;
+  border: 1px solid #e7e7e7;
 }
 
 .owner-info__telephone-input {
   font-family: "Oswald", "Arial", sans-serif;
-   font-style: normal;
-   font-weight: 400;
-   font-size: 16px;
-   line-height: 18px;
-   text-transform: uppercase;
-   color: #444444;
-   margin: 0;
-   padding: 0;
-   padding-left: 20px;
-   width: 201px;
-   height: 45px;
-   margin-left: 8px;
-   margin-bottom: 25px;
-   border: 1px solid #E7E7E7;
- }
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: #444444;
+  margin: 0;
+  padding: 0;
+  padding-left: 20px;
+  width: 201px;
+  height: 45px;
+  margin-left: 8px;
+  margin-bottom: 25px;
+  border: 1px solid #e7e7e7;
+}
