--- a/source/sass/common/container.scss
+++ b/source/sass/common/container.scss
@@ -1,5 +1,21 @@
 .container {
   width: 320px;
-  margin-left: auto;
-  margin-right: auto;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
+@media (min-width: $tablet-width) {
+  .container {
+    min-width: 768px;
+    padding: 0 30px;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .container {
+    min-width: 1440px;
+    padding: 0 110px;
+    margin: 0 auto;
+  }
 }
