--- a/source/sass/header/main-navigation.scss
+++ b/source/sass/header/main-navigation.scss
@@ -30,9 +30,15 @@
 
 @media (min-width: $tablet-width) {
   .main-navigation__item {
-    padding-top: 5px;
+    padding-top: 10px;
     padding-bottom: 5px;
     border-top: 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .main-navigation__item {
+    padding-top: 5px;
   }
 }
 
@@ -51,7 +57,6 @@
     font-size: 18px;
     line-height: 24px;
     font-weight: 400;
-
   }
 }
 
