--- a/source/sass/footer/copyright.scss
+++ b/source/sass/footer/copyright.scss
@@ -6,6 +6,12 @@
   align-items: center;
 }
 
+@media (min-width: $tablet-width) {
+  .copyright {
+    padding: 0;
+  }
+}
+
 .copyright__link {
   width: 100%;
   display: flex;
@@ -19,4 +25,9 @@
   font-size: 16px;
   line-height: 19px;
   color: #444444;
+}
+@media (min-width: $tablet-width) {
+.copyright__name{
+margin-right: 28px;
+}
 }
