--- a/source/sass/footer/socials.scss
+++ b/source/sass/footer/socials.scss
@@ -1,3 +1,9 @@
+@media (min-width: $tablet-width) {
+  .socials {
+    display: flex;
+  }
+}
+
 .socials__list {
   list-style-type: none;
   margin: 0;
@@ -7,6 +13,12 @@
   padding: 20px 0;
   border-top: 1px solid #d9d9d9;
   border-bottom: 1px solid #d9d9d9;
+}
+
+@media (min-width: $tablet-width) {
+  .socials__list {
+    border: 0;
+  }
 }
 
 .socials__item {
