--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,7 +5,7 @@
 @import "common/visually-hidden.scss";
 @import "common/page.scss";
 @import "common/container.scss";
-@import "common/button";
+@import "common/button.scss";
 @import "common/invite-cooperation.scss";
 
 // header
