--- a/source/sass/catalog/card-item.scss
+++ b/source/sass/catalog/card-item.scss
@@ -4,16 +4,62 @@
   border-bottom: 1px solid #ededed;
 }
 
+@media (min-width: $tablet-width) {
+  .card-item {
+    width: 324px;
+    height: 511px;
+    padding-bottom: 38px;
+    padding-left: 39px;
+    padding-right: 37px;
+    background: linear-gradient(to bottom, #ffffff 82px, #f2f2f2 0%);
+    margin-top: 60px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .card-item {
+    width: 245px;
+  }
+}
+
 .card-item:first-child {
   border-top: 1px solid #ededed;
+}
+
+@media (min-width: $tablet-width) {
+  .card-item:first-child {
+    border-top: 0;
+  }
 }
 
 .card-item__description {
   width: 140px;
 }
 
+@media (min-width: $tablet-width) {
+  .card-item__description {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 248px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .card-item__description {
+    width: 169px;
+  }
+}
+
 .card-item__wrapper {
   display: flex;
+}
+
+@media (min-width: $tablet-width) {
+  .card-item__wrapper {
+    flex-direction: column;
+  }
 }
 
 .card-item__link {
@@ -29,12 +75,36 @@
   color: #222222;
 }
 
+@media (min-width: $tablet-width) {
+  .card-item__link {
+    margin-top: 28px;
+    width: 156px;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+  }
+}
+
 .card-item__table {
   font-size: 12px;
   line-height: 16px;
   width: 140px;
   margin-top: 18px;
   margin-bottom: 22px;
+}
+
+@media (min-width: $tablet-width) {
+  .card-item__table {
+    width: 250px;
+    font-size: 16px;
+    border-collapse: collapse;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .card-item__table {
+    width: 169px;
+  }
 }
 
 .card-item__feature {
@@ -46,6 +116,37 @@
   padding: 0;
 }
 
+@media (min-width: $tablet-width) {
+  .card-item__table td {
+    padding-bottom: 7px;
+    padding-top: 7px;
+    border-bottom: 1px solid #cdcdcd;
+  }
+}
+
 .card-item__button {
   text-decoration: none;
+}
+
+@media (min-width: $tablet-width) {
+  .card-item__button {
+    margin-top: 20px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .card-item__image {
+    // временное решение
+    margin-top: -30px;
+    width: 168px;
+    height: 200px;
+    object-fit: cover;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .card-item__image-link {
+    display: flex;
+    justify-content: center;
+  }
 }
