--- a/source/sass/catalog/catalog.scss
+++ b/source/sass/catalog/catalog.scss
@@ -4,6 +4,22 @@
   padding-right: 20px;
 }
 
+@media (min-width: $tablet-width) {
+  .catalog {
+    padding-top: 67px;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog {
+    padding-top: 74px;
+    padding-left: 110px;
+    padding-right: 110px;
+  }
+}
+
 .catalog__title {
   margin: 0;
   margin-bottom: 28px;
@@ -14,8 +30,29 @@
   color: #000000;
 }
 
+@media (min-width: $tablet-width) {
+  .catalog__title {
+    font-size: 60px;
+  }
+}
+
 .catalog__list {
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+@media (min-width: $tablet-width) {
+  .catalog__list {
+    display: flex;
+    width: 708px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog__list {
+    width: 1220px;
+  }
 }
