--- a/source/sass/catalog/more-items.scss
+++ b/source/sass/catalog/more-items.scss
@@ -3,24 +3,72 @@
   border-bottom: 1px solid #e6e6e6;
 }
 
+@media (min-width: $tablet-width) {
+  .more-items {
+    width: 324px;
+    height: 429px;
+    border: 1px solid #e6e6e6;
+    padding: 0 38px 38px 38px;
+    margin-top: 142px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .more-items {
+    width: 245px;
+  }
+}
+
 .more-items__title {
   margin: 0;
   margin-top: 80px;
-  margin-left: 10px;
   font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
+  text-align: center;
   text-transform: uppercase;
   color: #111111;
+  position: relative;
+}
+
+
+@media (min-width: $tablet-width) {
+  .more-items__title {
+    margin-top: 180px;
+    font-size: 20px;
+    line-height: 22px;
+    width: 134px;
+    margin-left: 52px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .more-items__title {
+    margin-left: 13px;
+  }
 }
 
 .more-items__title::before {
-  content: url("../img/catalog/plus.svg");
-  position: relative;
-  bottom: 50px;
-  left: 115px;
+  content: "";
+  background-image: url("../img/catalog/plus.svg");
+  background-repeat: no-repeat;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  left: 120px;
+  bottom: 40px;
+}
+
+@media (min-width: $tablet-width) {
+  .more-items__title::before {
+    background-image: url("../img/catalog/plus-768.svg");
+    width: 60px;
+    height: 60px;
+    left: 40px;
+    bottom: 100px;
+  }
 }
 
 .more-items__text {
@@ -32,6 +80,35 @@
   text-align: center;
 }
 
+@media (min-width: $tablet-width) {
+  .more-items__text {
+    font-size: 16px;
+    line-height: 18px;
+    width: 165px;
+    margin-left: 38px;
+    margin-top: 30px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .more-items__text {
+    margin-left: 0;
+  }
+}
+
 .more-items__button {
   text-decoration: none;
+}
+
+@media (min-width: $tablet-width) {
+.more-items__button {
+    width: 248px;
+    margin-top: 52px
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .more-items__button {
+    width: 169px;
+  }
 }
