--- a/source/sass/catalog/extra-card-item.scss
+++ b/source/sass/catalog/extra-card-item.scss
@@ -3,6 +3,45 @@
   border-bottom: 1px solid #e6e6e6;
 }
 
+.extra-card-item:first-child {
+  border-top: 1px solid #ededed;
+}
+
+@media (min-width: $tablet-width) {
+  .extra-card-item {
+    border-left: 1px solid #ededed;
+    border-right: 1px solid #ededed;
+    border-bottom: 1px solid #ededed;
+    padding-left: 37px;
+    padding-right: 37px;
+    padding-bottom: 28px;
+  }
+
+  .extra-card-item:first-child {
+    border-top: 1px solid #ededed;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .extra-card-item {
+    width: 896px;
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+    border-left: 0;
+    border-right: 0;
+
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .extra-card-item__wrapper {
+    width: 632px;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
 .extra-card-item__title {
   font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
@@ -16,18 +55,59 @@
   margin-bottom: 15px;
 }
 
+@media (min-width: $tablet-width) {
+  .extra-card-item__title {
+    font-size: 20px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+  }
+}
+
 .extra-card-item__table {
   margin-top: 15px;
   margin-bottom: 15px;
   width: 280px;
 }
 
+@media (min-width: $tablet-width) {
+  .extra-card-item__table {
+    font-size: 16px;
+    line-height: 20px;
+    width: 223px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .extra-card-item__table {
+    width: 300px;
+  }
+}
+
 .extra-card-item__button {
   text-decoration: none;
 }
 
+@media (min-width: $desktop-width) {
+  .extra-card-item__button {
+    width: 244px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .extra-card-item__button {
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+}
+
 .extra-card-item__feature {
   padding: 0;
+}
+
+@media (min-width: $tablet-width) {
+  .extra-card-item__feature {
+    width: 132px;
+  }
 }
 
 .extra-card-item__value {
