Добавляет адаптивную сетку странице form.html

--- a/source/sass/catalog/more-items.scss
+++ b/source/sass/catalog/more-items.scss
@@ -101,9 +101,9 @@
 }
 
 @media (min-width: $tablet-width) {
-.more-items__button {
+  .more-items__button {
     width: 248px;
-    margin-top: 52px
+    margin-top: 52px;
   }
 }
 
