--- a/source/sass/form/program-target.scss
+++ b/source/sass/form/program-target.scss
@@ -12,8 +12,27 @@
   line-height: 18px;
   text-transform: uppercase;
   color: #222222;
-  border-top: 1px solid #d9d9d9;
-  border-bottom: 1px solid #d9d9d9;
+  border-top: 1px solid #e7e7e7;
+  border-bottom: 1px solid #e7e7e7;
+}
+
+
+@media (min-width: $tablet-width) {
+  .program-target {
+    font-size: 20px;
+    line-height: 30px;
+    border: 1px solid #e7e7e7;
+    width: 628px;
+    height: 200px;
+    margin-top: 45px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .program-target {
+    width: 568px;
+    margin-top: 0;
+  }
 }
 
 .program-target__radio-list {
@@ -28,6 +47,19 @@
   margin-bottom: 15px;
 }
 
+@media (min-width: $tablet-width) {
+  .program-target__input {
+    margin-bottom: 35px;
+    margin-left: 35px;
+  }
+}
+
 .program-target__name {
   margin-left: 15px;
+}
+
+@media (min-width: $tablet-width) {
+  .program-target__name {
+    margin-left: 20px;
+  }
 }
