--- a/source/sass/form/selection.scss
+++ b/source/sass/form/selection.scss
@@ -4,6 +4,22 @@
   padding-right: 20px;
 }
 
+@media (min-width: $tablet-width) {
+  .selection__wrapper {
+    padding-top: 65px;
+    padding-left: 68px;
+    padding-right: 68px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .selection__wrapper {
+    padding-top: 73px;
+    padding-left: 110px;
+    padding-right: 110px;
+  }
+}
+
 .selection__title {
   margin: 0;
   margin-bottom: 37px;
@@ -12,6 +28,13 @@
   font-weight: 400;
   line-height: 100%;
   color: #000000;
+}
+
+@media (min-width: $tablet-width) {
+  .selection__title {
+    font-size: 60px;
+    margin-bottom: 56px;
+  }
 }
 
 .selection__text {
@@ -27,6 +50,49 @@
   margin-bottom: 39px;
 }
 
+@media (min-width: $tablet-width) {
+  .selection__text {
+    width: 323px;
+    font-size: 20px;
+    line-height: 30px;
+  }
+}
+
+.selection__form-submit-wrapper {
+  display: block;
+}
+
+@media (min-width: $tablet-width) {
+  .selection__form-submit-wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 533px;
+    margin-top: 15px;
+    margin-bottom: 72px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .selection__form-submit-wrapper {
+    width: 826px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .selection__form-submit {
+    font-size: 20px;
+    line-height: 100%;
+    width: 282px;
+    height: 52px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .selection__form-submit {
+    width: 568px;
+  }
+}
+
 .selection__form-required {
   line-height: 16px;
   margin: 0;
@@ -34,4 +100,24 @@
   margin-bottom: 32px;
   color: #000000;
   text-align: center;
+}
+
+@media (min-width: $tablet-width) {
+  .selection__form-required {
+    margin-top: 15px;
+    margin-bottom: 0;
+    font-size: 16px;
+    line-height: 100%;
+  }
+}
+
+.selection__field-coupler {
+  display: block;
+}
+
+@media (min-width: $desktop-width) {
+  .selection__field-coupler {
+    display: flex;
+    justify-content: space-between;
+  }
 }
