--- a/source/sass/index/example.scss
+++ b/source/sass/index/example.scss
@@ -5,7 +5,6 @@
 
 @media (min-width: $tablet-width) {
   .example {
-    background-color: #ffffff;
     border-top: 1px solid #e6e6e6;
     background: linear-gradient(to bottom, #ffffff 610px, #eaeaea 0%);
   }
@@ -28,6 +27,7 @@
   .example__wrapper {
     padding-left: 30px;
     padding-right: 30px;
+    padding-bottom: 55px;
   }
 }
 
@@ -36,7 +36,6 @@
     padding-left: 110px;
     padding-right: 110px;
     display: flex;
-
   }
 }
 
@@ -107,7 +106,7 @@
     margin-right: 0;
     position: relative;
     left: 542px;
-    bottom: 105px;
+    bottom: 90px;
     text-align: right;
   }
 }
