--- a/source/sass/index/slider.scss
+++ b/source/sass/index/slider.scss
@@ -16,19 +16,28 @@
 }
 
 @media (min-width: $tablet-width) {
+  .slider__range {
+    width: 560px;
+  }
+}
+
+@media (min-width: $tablet-width) {
   .slider__image--before {
     // временное решение
-    width: 306px;
-    height: 560px;
+    width: 280px;
+    height: 512px;
     object-fit: cover;
+    object-position: left;
   }
 }
 
 @media (min-width: $tablet-width) {
   .slider__image--after {
     // временное решение
-    width: 306px;
-    height: 560px;
+    width: 280px;
+    height: 512px;
     object-fit: cover;
+    object-position: right;
+    margin-left: -4px;
   }
 }
